--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,2 +1,20 @@
 .f-c-form {
 }
+
+.f-c-progress {
+  height: 20px;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  z-index: 1000;
+}
+
+.f-c-progress__inner {
+  background: #000;
+  position: absolute;
+  left: -100%;
+  height: 100%;
+  width: 100%;
+  transition: transform 0.3s ease-in-out;
+}
