--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,9 +1,18 @@
 .f-c-form {
+  position: relative;
+  height: 100%;
+  width: 100%;
+}
+
+.f-c-counter {
+  position: absolute;
+  top: 30px;
+  right: 30px;
 }
 
 .f-c-progress {
   height: 20px;
-  position: fixed;
+  position: absolute;
   bottom: 0;
   left: 0;
   right: 0;
