--- a/src/css/main.css
+++ b/src/css/main.css
@@ -2,18 +2,28 @@
   position: relative;
   height: 100%;
   width: 100%;
+  flex: 1;
+  display: flex;
+  flex-direction: column;
 }
 
 .f-c-list {
   list-style: none;
   padding: 0;
   margin: 0;
+  height: 100%;
+  width: 100%;
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 .f-c-list__item {
   max-width: 500px;
-  width: 90%;
-  margin: 0 auto;
+  width: 80%;
+  margin: 0 10% 0 5%;
+  position: absolute;
 }
 
 .f-c-counter {
@@ -26,7 +36,7 @@
   list-style: none;
   position: absolute;
   top: 50%;
-  right: 30px;
+  right: 5%;
   transform: translate(0, -50%);
 }
 
@@ -36,6 +46,7 @@
   border-radius: 50%;
   margin-bottom: 10px;
   cursor: pointer;
+  transition: background-color 0.3s ease-in-out;
 }
 
 .f-c-progress {
@@ -67,4 +78,50 @@
   width: 100%;
   margin-top: 1em;
   padding: 20px;
+}
+
+.f-c-input:focus {
+  outline: none;
+}
+
+.f-c-button {
+  background: #000;
+  color: #fff;
+  border: 0;
+  padding: 0.5em;
+  font-size: 1.5em;
+  transition: opacity 0.3s ease-in-out;
+}
+
+.f-c-button:disabled {
+  opacity: 0.3;
+}
+
+.f-c-button--continue {
+  position: absolute;
+  bottom: 30px;
+  right: 30px;
+}
+
+.f-a-from-bottom--enter {
+  transform: translate(0, 200%);
+  opacity: 0;
+}
+.f-a-from-bottom--enter-active {
+  transform: translate(0, 0);
+  opacity: 1;
+  transition: transform .5s ease-in-out, opacity .5s ease-in-out;
+}
+.f-a-from-bottom--exit {
+  transform: translate(0, 0);
+  opacity: 1;
+}
+.f-a-from-bottom--exit-active {
+  transform: translate(0, -200%);
+  opacity: 0;
+  transition: transform .5s ease-in-out, opacity .5s ease-in-out;
+}
+.f-a-from-bottom--appear {
+}
+.f-a-from-bottom--appear-active {
 }
