--- a/src/css/main.css
+++ b/src/css/main.css
@@ -71,6 +71,9 @@
   margin-bottom: 10px;
   cursor: pointer;
   transition: background-color 0.3s ease-in-out;
+  display: block;
+  padding: 0;
+  border: 0;
 }
 
 .f-c-progress {
@@ -136,8 +139,7 @@
   color: #fff;
   padding: 0.5em 1em;
   font-size: 1.5em;
-  transition: opacity 0.3s ease-in-out, background-color 0.3s ease-in-out,
-    color 0.3s ease-in-out;
+  transition: opacity 0.3s ease-in-out, background-color 0.3s ease-in-out, color 0.3s ease-in-out;
 }
 
 .f-c-button:disabled {
