file uploads input

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -29,7 +29,6 @@
 }
 
 .f-c-list__item {
-  max-width: 500px;
   width: 100%;
   position: absolute;
 }
@@ -78,7 +77,7 @@
 }
 
 .f-c-progress {
-  height: 20px;
+  height: 15px;
   position: absolute;
   bottom: 0;
   left: 0;
@@ -102,6 +101,50 @@
   user-select: none;
 }
 
+.f-c-label--file {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  min-height: 150px;
+  width: 100%;
+  border: 4px dashed rgba(255, 255, 255, 0.5);
+  border-radius: 10px;
+  cursor: pointer;
+  position: relative;
+}
+
+.f-c-label--overlay {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background-color: rgba(0, 0, 0, 0.3);
+  transition: opacity 0.3s ease-in-out;
+}
+
+.f-c-label--file:hover .f-c-label--overlay {
+  opacity: 1 !important;
+}
+
+.f-c-label--img {
+  position: relative;
+}
+
+.f-c-label--img:hover:after {
+  content: '';
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background-color: rgba(0, 0, 0, 0.3);
+}
+
 .f-c-input {
   background-color: transparent;
   border: 0;
@@ -112,6 +155,11 @@
   padding-bottom: 10px;
   font-size: 1.5em;
   resize: none;
+  max-width: 500px;
+}
+
+.f-c-input[type='file'] {
+  display: none;
 }
 
 .f-c-input:focus {
